syntax = "proto3";

package yandex.cloud.events.compute.instancegroup;

import "google/rpc/status.proto";
import "google/protobuf/field_mask.proto";
import "yandex/cloud/events/common.proto";
import "yandex/cloud/validation.proto";
import "yandex/cloud/events/options.proto";
import "yandex/cloud/access/access.proto";
import "yandex/cloud/compute/v1/instancegroup/instance_group.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/events/compute/instancegroup;instancegroup";
option java_package = "yandex.cloud.api.events.compute.instancegroup";
option java_outer_classname = "InstanceGroupEvents";

message CreateInstanceGroup {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8 [(required) = true];
  Response response = 9 [(required) = true];

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
    CANCELLED = 4;
  }

  message EventDetails {
    string instance_group_id = 1 [(required) = true];
    string instance_group_name = 2;
    yandex.cloud.compute.v1.instancegroup.InstanceTemplate instance_template = 3;
    yandex.cloud.compute.v1.instancegroup.ScalePolicy scale_policy = 4;
    yandex.cloud.compute.v1.instancegroup.DeployPolicy deploy_policy = 5;
    yandex.cloud.compute.v1.instancegroup.AllocationPolicy allocation_policy = 6;
    yandex.cloud.compute.v1.instancegroup.LoadBalancerSpec load_balancer_spec = 7;
    yandex.cloud.compute.v1.instancegroup.ApplicationLoadBalancerSpec application_load_balancer_spec = 8;
    yandex.cloud.compute.v1.instancegroup.HealthChecksSpec health_checks_spec = 9;
    string service_account_id = 10;
    string status = 11;
    repeated yandex.cloud.compute.v1.instancegroup.Variable variables = 12;
    bool deletion_protection = 13;
    yandex.cloud.compute.v1.instancegroup.LoadBalancerState load_balancer_state = 14;
    yandex.cloud.compute.v1.instancegroup.ApplicationLoadBalancerState application_load_balancer_state = 15;
  }

  message RequestParameters {
    oneof request {
      CreateRequestParameters create_request_parameters = 1;
      CreateFromYamlRequestParameters create_from_yaml_request_parameters = 2;
    }

    message CreateRequestParameters {
      string folder_id = 1 [(required) = true];
      string name = 2;
      yandex.cloud.compute.v1.instancegroup.InstanceTemplate instance_template = 3;
      yandex.cloud.compute.v1.instancegroup.ScalePolicy scale_policy = 4;
      yandex.cloud.compute.v1.instancegroup.DeployPolicy deploy_policy = 5;
      yandex.cloud.compute.v1.instancegroup.AllocationPolicy allocation_policy = 6;
      yandex.cloud.compute.v1.instancegroup.LoadBalancerSpec load_balancer_spec = 7;
      yandex.cloud.compute.v1.instancegroup.ApplicationLoadBalancerSpec application_load_balancer_spec = 8;
      yandex.cloud.compute.v1.instancegroup.HealthChecksSpec health_checks_spec = 9;
      string service_account_id = 10;
      repeated yandex.cloud.compute.v1.instancegroup.Variable variables = 11;
      bool deletion_protection = 12;
    }

    message CreateFromYamlRequestParameters {
      string folder_id = 1 [(required) = true];
      string instance_group_yaml = 2 [(required) = true];
    }
  }

  message Response {
    string operation_id = 1;
  }
}

message UpdateInstanceGroup {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8 [(required) = true];
  Response response = 9 [(required) = true];

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
    CANCELLED = 4;
  }

  message EventDetails {
    string instance_group_id = 1 [(required) = true];
    string instance_group_name = 2;
    yandex.cloud.compute.v1.instancegroup.InstanceTemplate instance_template = 3;
    yandex.cloud.compute.v1.instancegroup.ScalePolicy scale_policy = 4;
    yandex.cloud.compute.v1.instancegroup.DeployPolicy deploy_policy = 5;
    yandex.cloud.compute.v1.instancegroup.AllocationPolicy allocation_policy = 6;
    yandex.cloud.compute.v1.instancegroup.LoadBalancerSpec load_balancer_spec = 7;
    yandex.cloud.compute.v1.instancegroup.ApplicationLoadBalancerSpec application_load_balancer_spec = 8;
    yandex.cloud.compute.v1.instancegroup.HealthChecksSpec health_checks_spec = 9;
    string service_account_id = 10;
    string status = 11;
    repeated yandex.cloud.compute.v1.instancegroup.Variable variables = 12;
    bool deletion_protection = 13;
    yandex.cloud.compute.v1.instancegroup.LoadBalancerState load_balancer_state = 14;
    yandex.cloud.compute.v1.instancegroup.ApplicationLoadBalancerState application_load_balancer_state = 15;
  }

  message RequestParameters {
    oneof request {
      UpdateRequestParameters update_request_parameters = 1;
      UpdateFromYamlRequestParameters update_from_yaml_request_parameters = 2;
    }

    message UpdateRequestParameters {
      string instance_group_id = 1 [(required) = true];
      google.protobuf.FieldMask update_mask = 2;
      string name = 3;
      yandex.cloud.compute.v1.instancegroup.InstanceTemplate instance_template = 4;
      yandex.cloud.compute.v1.instancegroup.ScalePolicy scale_policy = 5;
      yandex.cloud.compute.v1.instancegroup.DeployPolicy deploy_policy = 6;
      yandex.cloud.compute.v1.instancegroup.AllocationPolicy allocation_policy = 7;
      yandex.cloud.compute.v1.instancegroup.HealthChecksSpec health_checks_spec = 8;
      string service_account_id = 9;
      yandex.cloud.compute.v1.instancegroup.LoadBalancerSpec load_balancer_spec = 10;
      repeated yandex.cloud.compute.v1.instancegroup.Variable variables = 11;
      bool deletion_protection = 12;
    }

    message UpdateFromYamlRequestParameters {
      string instance_group_id = 1 [(required) = true];
      string instance_group_yaml = 2 [(required) = true];
    }
  }

  message Response {
    string operation_id = 1;
  }
}

message StartInstanceGroup {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8 [(required) = true];
  Response response = 9 [(required) = true];

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
    CANCELLED = 4;
  }

  message EventDetails {
    string instance_group_id = 1 [(required) = true];
    string instance_group_name = 2 [(required) = true];
    yandex.cloud.compute.v1.instancegroup.InstanceTemplate instance_template = 3;
    yandex.cloud.compute.v1.instancegroup.ScalePolicy scale_policy = 4;
    yandex.cloud.compute.v1.instancegroup.DeployPolicy deploy_policy = 5;
    yandex.cloud.compute.v1.instancegroup.AllocationPolicy allocation_policy = 6;
    yandex.cloud.compute.v1.instancegroup.LoadBalancerSpec load_balancer_spec = 7;
    yandex.cloud.compute.v1.instancegroup.HealthChecksSpec health_checks_spec = 8;
    string service_account_id = 9;
    string status = 10;
    repeated yandex.cloud.compute.v1.instancegroup.Variable variables = 11;
    bool deletion_protection = 12;
    yandex.cloud.compute.v1.instancegroup.ApplicationLoadBalancerSpec application_load_balancer_spec = 13;
    yandex.cloud.compute.v1.instancegroup.LoadBalancerState load_balancer_state = 14;
    yandex.cloud.compute.v1.instancegroup.ApplicationLoadBalancerState application_load_balancer_state = 15;
  }

  message RequestParameters {
    string instance_group_id = 1 [(required) = true];
  }

  message Response {
    string operation_id = 1;
  }
}

message StopInstanceGroup {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8 [(required) = true];
  Response response = 9 [(required) = true];

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
    CANCELLED = 4;
  }

  message EventDetails {
    string instance_group_id = 1 [(required) = true];
    string instance_group_name = 2 [(required) = true];
    yandex.cloud.compute.v1.instancegroup.InstanceTemplate instance_template = 3;
    yandex.cloud.compute.v1.instancegroup.ScalePolicy scale_policy = 4;
    yandex.cloud.compute.v1.instancegroup.DeployPolicy deploy_policy = 5;
    yandex.cloud.compute.v1.instancegroup.AllocationPolicy allocation_policy = 6;
    yandex.cloud.compute.v1.instancegroup.LoadBalancerSpec load_balancer_spec = 7;
    yandex.cloud.compute.v1.instancegroup.HealthChecksSpec health_checks_spec = 8;
    string service_account_id = 9;
    string status = 10;
    repeated yandex.cloud.compute.v1.instancegroup.Variable variables = 11;
    bool deletion_protection = 12;
    yandex.cloud.compute.v1.instancegroup.ApplicationLoadBalancerSpec application_load_balancer_spec = 13;
    yandex.cloud.compute.v1.instancegroup.LoadBalancerState load_balancer_state = 14;
    yandex.cloud.compute.v1.instancegroup.ApplicationLoadBalancerState application_load_balancer_state = 15;
  }

  message RequestParameters {
    string instance_group_id = 1 [(required) = true];
  }

  message Response {
    string operation_id = 1;
  }
}

message DeleteInstanceGroup {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8 [(required) = true];
  Response response = 9 [(required) = true];

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
    CANCELLED = 4;
  }

  message EventDetails {
    string instance_group_id = 1 [(required) = true];
    string instance_group_name = 2 [(required) = true];
    yandex.cloud.compute.v1.instancegroup.InstanceTemplate instance_template = 3;
    yandex.cloud.compute.v1.instancegroup.ScalePolicy scale_policy = 4;
    yandex.cloud.compute.v1.instancegroup.DeployPolicy deploy_policy = 5;
    yandex.cloud.compute.v1.instancegroup.AllocationPolicy allocation_policy = 6;
    yandex.cloud.compute.v1.instancegroup.LoadBalancerSpec load_balancer_spec = 7;
    yandex.cloud.compute.v1.instancegroup.HealthChecksSpec health_checks_spec = 8;
    string service_account_id = 9;
    string status = 10;
    repeated yandex.cloud.compute.v1.instancegroup.Variable variables = 11;
    bool deletion_protection = 12;
    yandex.cloud.compute.v1.instancegroup.ApplicationLoadBalancerSpec application_load_balancer_spec = 13;
    yandex.cloud.compute.v1.instancegroup.LoadBalancerState load_balancer_state = 14;
    yandex.cloud.compute.v1.instancegroup.ApplicationLoadBalancerState application_load_balancer_state = 15;
  }

  message RequestParameters {
    string instance_group_id = 1 [(required) = true];
  }

  message Response {
    string operation_id = 1;
  }
}

message SetInstanceGroupAccessBindings {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8 [(required) = true];
  Response response = 9 [(required) = true];

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
    CANCELLED = 4;
  }

  message EventDetails {
    string instance_group_id = 1 [(required) = true];
    string instance_group_name = 2 [(required) = true];
    repeated yandex.cloud.access.AccessBinding access_bindings = 3;
    repeated yandex.cloud.access.AccessBindingDelta access_binding_deltas = 4;
  }

  message RequestParameters {
    string instance_group_id = 1 [(required) = true];
    repeated yandex.cloud.access.AccessBinding access_bindings = 2;
  }

  message Response {
    string operation_id = 1;
  }
}

message UpdateInstanceGroupAccessBindings {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8 [(required) = true];
  Response response = 9 [(required) = true];

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
    CANCELLED = 4;
  }

  message EventDetails {
    string instance_group_id = 1 [(required) = true];
    string instance_group_name = 2 [(required) = true];
    repeated yandex.cloud.access.AccessBinding access_bindings = 3;
    repeated yandex.cloud.access.AccessBindingDelta access_binding_deltas = 4;
  }

  message RequestParameters {
    string instance_group_id = 1 [(required) = true];
    repeated yandex.cloud.access.AccessBindingDelta access_binding_deltas = 2;
  }

  message Response {
    string operation_id = 1;
  }
}

message PauseInstanceGroup {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8 [(required) = true];
  Response response = 9 [(required) = true];

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
    CANCELLED = 4;
  }

  message EventDetails {
    string instance_group_id = 1 [(required) = true];
    string instance_group_name = 2 [(required) = true];
    yandex.cloud.compute.v1.instancegroup.InstanceTemplate instance_template = 3;
    yandex.cloud.compute.v1.instancegroup.ScalePolicy scale_policy = 4;
    yandex.cloud.compute.v1.instancegroup.DeployPolicy deploy_policy = 5;
    yandex.cloud.compute.v1.instancegroup.AllocationPolicy allocation_policy = 6;
    yandex.cloud.compute.v1.instancegroup.LoadBalancerSpec load_balancer_spec = 7;
    yandex.cloud.compute.v1.instancegroup.HealthChecksSpec health_checks_spec = 8;
    string service_account_id = 9;
    string status = 10;
    repeated yandex.cloud.compute.v1.instancegroup.Variable variables = 11;
    bool deletion_protection = 12;
    yandex.cloud.compute.v1.instancegroup.ApplicationLoadBalancerSpec application_load_balancer_spec = 13;
    yandex.cloud.compute.v1.instancegroup.LoadBalancerState load_balancer_state = 14;
    yandex.cloud.compute.v1.instancegroup.ApplicationLoadBalancerState application_load_balancer_state = 15;
  }

  message RequestParameters {
    string instance_group_id = 1 [(required) = true];
  }

  message Response {
    string operation_id = 1;
  }
}

message ResumeInstanceGroup {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8 [(required) = true];
  Response response = 9 [(required) = true];

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
    CANCELLED = 4;
  }

  message EventDetails {
    string instance_group_id = 1 [(required) = true];
    string instance_group_name = 2 [(required) = true];
    yandex.cloud.compute.v1.instancegroup.InstanceTemplate instance_template = 3;
    yandex.cloud.compute.v1.instancegroup.ScalePolicy scale_policy = 4;
    yandex.cloud.compute.v1.instancegroup.DeployPolicy deploy_policy = 5;
    yandex.cloud.compute.v1.instancegroup.AllocationPolicy allocation_policy = 6;
    yandex.cloud.compute.v1.instancegroup.LoadBalancerSpec load_balancer_spec = 7;
    yandex.cloud.compute.v1.instancegroup.HealthChecksSpec health_checks_spec = 8;
    string service_account_id = 9;
    string status = 10;
    repeated yandex.cloud.compute.v1.instancegroup.Variable variables = 11;
    bool deletion_protection = 12;
    yandex.cloud.compute.v1.instancegroup.ApplicationLoadBalancerSpec application_load_balancer_spec = 13;
    yandex.cloud.compute.v1.instancegroup.LoadBalancerState load_balancer_state = 14;
    yandex.cloud.compute.v1.instancegroup.ApplicationLoadBalancerState application_load_balancer_state = 15;
  }

  message RequestParameters {
    string instance_group_id = 1 [(required) = true];
  }

  message Response {
    string operation_id = 1;
  }
}

message StopInstanceGroupInstances {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8 [(required) = true];
  Response response = 9 [(required) = true];

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
    CANCELLED = 4;
  }

  message EventDetails {
    string instance_group_id = 1 [(required) = true];
    string instance_group_name = 2 [(required) = true];
  }

  message RequestParameters {
    string instance_group_id = 1 [(required) = true];
    repeated string managed_instance_ids = 2;
  }

  message Response {
    string operation_id = 1;
  }
}

message DeleteInstanceGroupInstances {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8 [(required) = true];
  Response response = 9 [(required) = true];

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
    CANCELLED = 4;
  }

  message EventDetails {
    string instance_group_id = 1 [(required) = true];
    string instance_group_name = 2 [(required) = true];
  }

  message RequestParameters {
    string instance_group_id = 1 [(required) = true];
    repeated string managed_instance_ids = 2;
    bool create_another = 3;
  }

  message Response {
    string operation_id = 1;
  }
}
